# Kimera-VIO-Evaluation

./: .flake8  .git-blame-ignore-revs  .gitignore  .travis.yml  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  fastentrypoints.py  install.bash  pyproject.toml  setup.py  todo.txt  tox.ini
.github/ISSUE_TEMPLATE/: error-report.md
.github/workflows/: tox.yml
cfg/: evo_config.json
docker/: Dockerfile  build_docker.sh  run_docker.sh
evaluation/: __init__.py  command_line.py  evaluation_lib.py  go_seek_evaluation.py  main_evaluation.py  metric_semantic_evaluation.py  regression_tests.py  uHumans_evaluation.py
evaluation/templates/: vio_performance.html
evaluation/tests/: test_evaluation.py  test_evaluation_lib.py
evaluation/tools/: __init__.py  filesystem_utils.py  (+12 more)
experiments/: euroc.yaml  euroc_example.yaml  example_euroc.yaml  full_euroc.yaml  go_seek.yaml  jenkins_euroc.yaml  regression_test.yaml  uHumans2.yaml
html/: plots.html  vio_performance.html
notebooks/: all_tesse_metric_semantic_evaluation.ipynb  dynamic_metric_semantic_evaluation.ipynb  dynamic_metric_semantic_evaluation.py  metric_semantic_evaluation.ipynb  metric_semantic_evaluation.py  plot_backend.ipynb  plot_backend.py  plot_data_timestamps.py  plot_frontend.ipynb  plot_frontend.py  plot_frontend_statistics.ipynb  plot_lcd.ipynb  plot_lcd.py  plot_main_evaluation.ipynb  plot_main_evaluation.py  plot_regression_tests.ipynb  plot_regression_tests.py  regression_test.html  regression_test_MH_01_easy_smartNoiseSigma.html  regression_test_V1_01_easy_smartNoiseSigma.html  uHumans1_metric_semantic_evaluation.ipynb  uHumans1_metric_semantic_evaluation.py  uHumans2_metric_semantic_evaluation.ipynb  uHumans2_metric_semantic_evaluation.py
plotting_tools/: __init__.py  display_timing.py  latexify.py
scripts/: run.sh
src/: main_evaluation.py
tests/: conftest.py  test_dataset_evaluator.py  test_dataset_runner.py  test_evaluation.py  test_experiment_config.py  test_logger.py  test_metrics.py  test_tools.py  test_website_builder.py
website/: plots.html  vio_performance.html
(+97 files in other folders)
